# inventory_sistem

backend/: pyproject.toml
backend/backend/domain/entitys/: base_entity.py  budget.py
backend/tests/: test_budgets.py
