[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Everton Fontes <efs.fontes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.1.0"
rich = "^13.7.0"
pydantic = "^2.5.2"
fastapi = "^0.104.1"


[tool.poetry.group.dev.dependencies]
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
